<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:paddingBottom="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/complete_profile_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name:"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColorHint="@color/black"
                android:hint="@string/name_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email_hint"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ID:"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/id_hint"
                android:textColorHint="@color/black"
                android:inputType="number" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_default_profile"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_picture_description" />

        <Button
            android:id="@+id/btn_set_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:text="@string/set_picture_button" />

        <Button
            android:id="@+id/btn_save"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />

        <DatePicker
            android:layout_gravity="center"
            android:id="@+id/dp_date_of_birth"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



    </LinearLayout>
</ScrollView>
