<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".Login">

    <!-- Title -->
    <TextView
        android:text="@string/login"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Email TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxStrokeColor="@color/my_primary"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxStrokeColor="@color/my_primary"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />

    <!-- Forget Password TextView -->
    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <!-- Register Now TextView -->
    <TextView
        android:id="@+id/registernow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>
